force-app/main/default/objects/PriceRuleCondition__c/PriceRuleCondition__c.object-meta.xml
<CustomObject>
    <label>Price Rule Condition</label>
    <nameField>
        <displayFormat>PRC-{0000000}</displayFormat>
        <label>Price Rule Condition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>