force-app/main/default/objects/PriceRuleCondition__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skill__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>