force-app/main/default/objects/PriceRuleCondition__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote__c</fullName>
            </value>
            <value>
                <fullName>QuoteItem__c</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>RateCard__c</fullName>
            </value>
            <value>
                <fullName>RateCardItem__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>