force-app/main/default/objects/PriceRuleCondition__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Includes</fullName>
            </value>
            <value>
                <fullName>Not Includes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>