force-app/main/default/objects/PriceRuleCondition__c/fields/PriceRuleId__c.field-meta.xml
<CustomField>
    <fullName>PriceRuleId__c</fullName>
    <label>Price Rule</label>
    <referenceTo>PriceRule__c</referenceTo>
    <relationshipLabel>Price Rule Conditions</relationshipLabel>
    <relationshipName>PriceRuleConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>